test: update ProductsControllerTest.java